[package]
name = "dayax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
mlua = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }


[workspace.dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
http = "0.2.8"
serde_json = "1.0.91"
color-eyre = "0.6.2"
eyre = "0.6.8"
axum = { version = "0.6.2", features = ["macros"] }
tokio = { version = "1.24.1", features = ["full"] }

[workspace.dependencies.mlua]
version = "0.8.7"
features = ["async", "luajit", "vendored", "send", "serialize"]
