[workspace]
members = ["crates/*"]

[workspace.dependencies]
# `dayax` dependencies
tracing = "0.1.37"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
http = "0.2.8"
http-body = "0.4.5"
axum = "0.6.2"
tokio = "1.24.1"

# `dayax-server` dependencies
dayax = { version = "0.1.0", path = "crates/dayax" }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.25"
tracing-subscriber = "0.3.16"
color-eyre = "0.6.2"
eyre = "0.6.8"
clap = "4.0.32"

[workspace.dependencies.mlua]
version = "0.8.7"
features = ["serialize", "send"]
