[package]
name = "dayax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
mlua = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
http-body = { workspace = true }
